Make sure dropdowns don’t wrap indicator
closes #1896

--- a/src/pretalx/static/common/css/_dropdown.css
+++ b/src/pretalx/static/common/css/_dropdown.css
@@ -7,6 +7,9 @@ details.dropdown {
 
   summary {
     list-style: none;
+    display: flex;
+    align-items: baseline;
+
     &::before,
     &::marker {
       display: none;
